<resources>
    <string name="app_name">WhopIt</string>
    <string name="title_main">Welcome to WhopIt!</string>
    <string name="subtitle_main">Created by Evan Rettman and Ryan Murphy</string>
    <string name="title_howto">How to Play!</string>
    <string name="subtitle_howto">Below is a list of explanations for the different tasks.</string>
    <string name="title_scores">Top Scores</string>
    <string name="subtitle_scores">Here you can find the scores for each game played.</string>
    <string name="title_whopit">Time to Play!</string>
    <string name="subtitle_whopit">Follow the instructions, and try to get a high score!</string>

    <string name="but_howto">How To</string>
    <string name="but_start">Start</string>
    <string name="but_scores">High Scores</string>
    <string name="but_reset">Reset Scores</string>
    <string name="but_return">Return</string>

    <string name="instruct_whop">- To "Whop It!", tap the center of your screen.</string>
    <string name="instruct_twist">- To "Twist It!", quickly rotate your phone.</string>
    <string name="instruct_shake">- To "Shake It!", rapidly shake your phone without rotating it.</string>
    <string name="instruct_playfast">- Each time you get it correct, you get a point! Be careful though, take too long and the game will be over!</string>

    <string name="text_ready">Ready?</string>
    <string name="text_whopit">Whop It!</string>
    <string name="text_twistit">Twist It!</string>
    <string name="text_shakeit">Shake It!</string>

</resources>
