<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main">

    <LinearLayout android:id="@+id/layout_title"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_scores"
        android:textSize="30sp"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_scores"
        android:textSize="16sp"
        android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10sp"
        android:layout_gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_title"
        app:layout_constraintBottom_toTopOf="@id/layout_navigation">

        <ListView
            android:id="@+id/lv_scores"
            android:layout_width="match_parent"
            android:layout_height="504dp" />
    </LinearLayout>
    <LinearLayout android:id="@+id/layout_navigation"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent">
    <Button android:id="@+id/but_return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/but_return"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>